Consolidate all CollectionManager/CollectionsManager/CollectionHandler duplicate implementations into one canonical CollectionManager in com
By Jarvis agent Forge.